--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
